12019
Does that mean the example should work? You needn't reply here; just so the document clarifies it.

{code}
scala> val _x = 5
_x: Int = 5

scala> s"$_x"
<console>:1: error: error in interpolated string: identifier or block expected
s"$_x"
   ^

scala> q"def f = 42" match { case q"def f = $_" => }

scala> q"def fx = 42" match { case q"def $_x = $_" => }
<console>:17: error: Don't know how to extract here
       q"def fx = 42" match { case q"def $_x = $_" => }
                                          ^

{code}
